Be able to download a Json file from a document [sc-1649]
Adding an option to download Algolia JSON from the resource list

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -122,6 +122,7 @@
 	"generic.dismiss": "Tancar",
 	"generic.done": "Fet",
 	"generic.download": "Descarregar",
+	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Editar",
 	"generic.email": "Correu electrònic",
 	"generic.expand_info": "desplegar tota la informació",
