--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -122,6 +122,7 @@
 	"generic.dismiss": "Cerrar",
 	"generic.done": "Hecho",
 	"generic.download": "Descargar",
+	"generic.download_algolia_json": "TODO",
 	"generic.edit": "Edit",
 	"generic.email": "Correo electrónico",
 	"generic.expand_info": "desplegar toda la información",
