Implement the new onboarding flow [sc-1647]

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -121,6 +121,7 @@
 	"generic.contributor": "Contributor",
 	"generic.copied": "Copied!",
 	"generic.copy": "Copy",
+	"generic.create": "Create",
 	"generic.creation_date": "Creation date",
 	"generic.dangerous": "Dangerous zone",
 	"generic.dashboard": "Dashboard",
@@ -188,7 +189,6 @@
 	"generic.switch_account": "Switch account",
 	"generic.tags": "Tags",
 	"generic.title": "Title",
-	"generic.try_again": "Please try again. If the error persists, contact us.",
 	"generic.unlink": "Unlink",
 	"generic.user": "User",
 	"generic.user_preferences": "User preferences",
@@ -394,17 +394,23 @@
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
 	"searchbar.help": "Search",
-	"setup.account_name_not_available": "This account name is not available",
+	"setup.account_name_not_available": "Account name already taken. Try with another one",
+	"setup.account_preferences": "1. Let’s start with your account preferences",
 	"setup.account_validated": "Your account has been validated",
+	"setup.create_account": "Create an API Account",
+	"setup.data_storage": "Where do you want to host your data?",
+	"setup.kb_created": "A <strong>Knowledge box</strong>, the place to store any data to make the unsearchable, searchable, will be created.",
 	"setup.knowledge_box_creation": "We will create a Knowledge Box using your account's name. It will be used to initially store your data. Data will be processed in the zone you select.",
 	"setup.name_account": "Name your Account",
 	"setup.name_account_placeholder": "Name the account",
 	"setup.process_completed": "",
 	"setup.processing_file": "",
+	"setup.push_data": "2. Push data",
 	"setup.set_password": "Set your password",
 	"setup.soon_more_areas": "Soon more areas to choose from",
 	"setup.upload_document": "",
-	"setup.upload_file": "Upload your file",
+	"setup.upload_file": "Upload a file",
+	"setup.upload_using_api": "Upload using the API",
 	"setup.watch_tutorial": "Take advantage of these minutes to watch a video tutorial and learn how Nuclia work",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
