--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -112,6 +112,7 @@
 	"generic.contributor": "Contributor",
 	"generic.copied": "Copiado!",
 	"generic.copy": "Copiar",
+	"generic.create": "Crear",
 	"generic.creation_date": "Fecha creación",
 	"generic.dangerous": "Zona peligrosa",
 	"generic.dashboard": "Dashboard",
@@ -175,7 +176,6 @@
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.tags": "Etiquetas",
 	"generic.title": "Título",
-	"generic.try_again": "Por favor vuelve a intentarlo. Si el problema persiste ponte en contacto con nosotros.",
 	"generic.unlink": "Desenlazar",
 	"generic.user": "Usuario",
 	"generic.user_preferences": "Preferencias de Usuario",
@@ -354,17 +354,23 @@
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
 	"searchbar.help": "Busca",
-	"setup.account_name_not_available": "Este nombre de cuenta no está disponible",
+	"setup.account_name_not_available": "Este nombre de cuenta no está disponible. Prueba con otro.",
+	"setup.account_preferences": "1. Empezamos con las preferencias de tu cuenta",
 	"setup.account_validated": "Tu cuenta ha sido validada",
+	"setup.create_account": "TODO",
+	"setup.data_storage": "¿Done quieres alojar tus datos ?",
+	"setup.kb_created": "TODO",
 	"setup.knowledge_box_creation": "Se creará una Caja de conocimiento con el mismo nombre para guardar toda la documentación vinculada que subas. Será procesada con la zona y proveedor escogido.",
 	"setup.name_account": "Elige el nombre de tu cuenta",
 	"setup.name_account_placeholder": "Nombre de la cuenta",
 	"setup.process_completed": "Proceso finalizado!",
 	"setup.processing_file": "Nuclia necesita unos minutos para procesarlo.",
+	"setup.push_data": "2. Sube datos",
 	"setup.set_password": "Establece tu contraseña",
 	"setup.soon_more_areas": "Más zonas para escoger próximamente",
 	"setup.upload_document": "Sube un documento en PDF con un peso inferior a 100 kB.",
 	"setup.upload_file": "Sube un archivo",
+	"setup.upload_using_api": "Sube datos con la API",
 	"setup.watch_tutorial": "Aprovecha estos minutos para ver un videotutorial y aprender cómo funciona Nuclia",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
