Oriolperramon8396/sc 1647/implement the new onboarding flow (#88)
* Use DecimalPipe

* Implement the new onboarding flow [sc-1647]

* Link back to Knowledge box

* Remove unused component

* Fix test

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -112,6 +112,7 @@
 	"generic.contributor": "Contributor",
 	"generic.copied": "Copiat!",
 	"generic.copy": "Copiar",
+	"generic.create": "Crear",
 	"generic.creation_date": "Data creació",
 	"generic.dangerous": "Zona perillosa",
 	"generic.dashboard": "Dashboard",
@@ -175,7 +176,6 @@
 	"generic.switch_account": "Canviar de compte",
 	"generic.tags": "Etiquetes",
 	"generic.title": "Títol",
-	"generic.try_again": "Si us plau torna-ho a intentar. Si l'error persisteix posa't en contacte amb nosaltres.",
 	"generic.unlink": "Desenllaçar",
 	"generic.user": "Usuari",
 	"generic.user_preferences": "Preferències d’Usuari",
@@ -354,18 +354,20 @@
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
 	"searchbar.help": "Cerca ",
-	"setup.account_name_not_available": "Aquest nom de compte no está disponible",
+	"setup.account_name_not_available": "Aquest nom de compte no està disponible. Prova'n un altre.",
+	"setup.account_preferences": "1. Comencem amb les preferències del teu compte",
 	"setup.account_validated": "El teu compte ha estat validat",
+	"setup.create_account": "TODO",
+	"setup.data_storage": "On vols allotjar les teves dades ?",
+	"setup.kb_created": "TODO",
 	"setup.knowledge_box_creation": "Es crearà una Caixa de coneixament amb el mateix nom per a guardar tota la documentació vinculada que pugis. Serà processada amb la zona i proveïdor escollit.",
 	"setup.name_account": "Tria el nom del teu compte",
 	"setup.name_account_placeholder": "Nom del compte",
-	"setup.process_completed": "Procés finalitzat!",
-	"setup.processing_file": "Nuclia necessita uns minuts per a processar-lo.",
+	"setup.push_data": "2. Puja dades",
 	"setup.set_password": "Estableix la contrasenya",
 	"setup.soon_more_areas": "Més zones per escollir properament",
-	"setup.upload_document": "Puja un document en PDF amb un pes inferior a 100 kB.",
 	"setup.upload_file": "Puja un arxiu",
-	"setup.watch_tutorial": "Aprofita aquests minuts per veure un vídeo tutorial i aprendre com funciona Nuclia",
+	"setup.upload_using_api": "Puja dades amb l'API",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
 	"stash.create": "Crea una caixa de coneixement",
