--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -397,9 +397,9 @@
 	"setup.account_name_not_available": "Account name already taken. Try with another one",
 	"setup.account_preferences": "1. Let’s start with your account preferences",
 	"setup.account_validated": "Your account has been validated",
-	"setup.create_account": "Create an API Account",
+	"setup.create_account": "Hi {{user}}! Welcome! 👋 😄",
 	"setup.data_storage": "Where do you want to host your data?",
-	"setup.kb_created": "A <strong>Knowledge box</strong>, the place to store any data to make the unsearchable, searchable, will be created.",
+	"setup.kb_created": "A <strong>Knowledge box</strong> – the place to store any data to make the unsearchable, searchable – will be created.",
 	"setup.knowledge_box_creation": "We will create a Knowledge Box using your account's name. It will be used to initially store your data. Data will be processed in the zone you select.",
 	"setup.name_account": "Name your Account",
 	"setup.name_account_placeholder": "Name the account",
