Show alert when entering an empty knowledge box

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -381,6 +381,7 @@
 	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
 	"stash.description": "Descipció",
 	"stash.email": "Servidor de correu",
+	"stash.empty_kb": "La caixa de coneixement encara està buida!",
 	"stash.enable_stash_email": "Habilitar correu electrònic",
 	"stash.entities.custom_entities": "Entitats personalitzades",
 	"stash.entities.named_entities": "Entitats detectades",
@@ -438,6 +439,8 @@
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.top_insights_description": "Escull les quatre entitats més essencials disponibles al menú de filtres",
+	"stash.upload_data": "Pujar dades",
+	"stash.upload_to_search": "Puja dades per comença a utilitzar el motor de cerca.",
 	"stash.users.role": "Rol",
 	"stash.users.title": "Usuaris",
 	"stash.users.users": "usuaris",
