--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -431,6 +431,7 @@
 	"stash.delete_stash_data": "Delete the knowledge box and all the data it contains",
 	"stash.description": "Description",
 	"stash.email": "Email server",
+	"stash.empty_kb": "Your knowledge box is still empty!",
 	"stash.enable_stash_email": "Enable email",
 	"stash.entities.custom_entities": "Personalized named entities",
 	"stash.entities.named_entities": "Detected named entites",
@@ -495,6 +496,8 @@
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
 	"stash.top_insights_description": "Please, select the 4 essential insights you would like have in the filters menu.",
+	"stash.upload_data": "Upload data",
+	"stash.upload_to_search": "Upload data to start using the AI-search engine.",
 	"stash.users.role": "Role",
 	"stash.users.title": "Users",
 	"stash.users.users": "users",
