--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -381,6 +381,7 @@
 	"stash.delete_stash_data": "Elimina la caja de conocimiento y todos los datos que contiene",
 	"stash.description": "Descripción",
 	"stash.email": "Servidor de correo",
+	"stash.empty_kb": "!La caja de conocimiento aun está vacía!",
 	"stash.enable_stash_email": "Habilitar correo electrónico",
 	"stash.entities.custom_entities": "Entidades personalizadas",
 	"stash.entities.named_entities": "Entidades detectadas",
@@ -438,6 +439,8 @@
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.top_insights_description": "Elige las cuatro entidades más esenciales disponibles en el menú de filtros",
+	"stash.upload_data": "Subir datos",
+	"stash.upload_to_search": "Sube datos para empezar a utilizar el motor de búsqueda.",
 	"stash.users.role": "Rol",
 	"stash.users.title": "Usuarios",
 	"stash.users.users": "usuarios",
