Add UID and slug to kb profile page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -184,11 +184,13 @@
 	"generic.settings": "Settings",
 	"generic.showing": "Showing",
 	"generic.skip": "Skip",
+	"generic.slug": "Slug",
 	"generic.suggeriment": "Send suggestion",
 	"generic.suggestions": "Suggestions",
 	"generic.switch_account": "Switch account",
 	"generic.tags": "Tags",
 	"generic.title": "Title",
+	"generic.uid": "UID",
 	"generic.unlink": "Unlink",
 	"generic.user": "User",
 	"generic.user_preferences": "User preferences",
@@ -441,7 +443,7 @@
 	"stash.home.tags.title": "Tag distribution representation",
 	"stash.home.tags.total": "total tags",
 	"stash.invited_user": "We have sent an invitation email to {{user}} to join this knowledge box. ",
-	"stash.kb_name_invalid": "Invalid knowledge box name",
+	"stash.kb_name_invalid": "Invalid knowledge box slug",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Manage users",
 	"stash.name": "Knowledge Box name",
