--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -171,11 +171,13 @@
 	"generic.settings": "Configuración",
 	"generic.showing": "Mostrando",
 	"generic.skip": "Omitir",
+	"generic.slug": "Slug",
 	"generic.suggeriment": "Sugerencias a Flaps",
 	"generic.suggestions": "Sugerencias",
 	"generic.switch_account": "Cambia de cuenta",
 	"generic.tags": "Etiquetas",
 	"generic.title": "Título",
+	"generic.uid": "UID",
 	"generic.unlink": "Desenlazar",
 	"generic.user": "Usuario",
 	"generic.user_preferences": "Preferencias de Usuario",
@@ -391,7 +393,7 @@
 	"stash.home.tags.title": "Gráfica de distribución de tags",
 	"stash.home.tags.total": "tags en total",
 	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta caja de conocimiento",
-	"stash.kb_name_invalid": "El nombre de la caja de conocimiento no es válido",
+	"stash.kb_name_invalid": "El slug de la caja de conocimiento no es válido",
 	"stash.logotip": "Logotipo",
 	"stash.manage_users": "Gestionar usuarios",
 	"stash.name": "Nombre de la Caja",
