Use proper kb_slug_invalid validation message

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -393,7 +393,8 @@
 	"stash.home.tags.title": "Gràfica de distribució de tags",
 	"stash.home.tags.total": "tags en total",
 	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la caixa de coneixement",
-	"stash.kb_name_invalid": "El slug de la caixa de coneixement no és vàlid",
+	"stash.kb_name_invalid": "El nom de la caixa de coneixement no és vàlid",
+	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Caixa",
