--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -443,7 +443,8 @@
 	"stash.home.tags.title": "Tag distribution representation",
 	"stash.home.tags.total": "total tags",
 	"stash.invited_user": "We have sent an invitation email to {{user}} to join this knowledge box. ",
-	"stash.kb_name_invalid": "Invalid knowledge box slug",
+	"stash.kb_name_invalid": "Invalid knowledge box name",
+	"stash.kb_slug_invalid": "Invalid knowledge box slug",
 	"stash.logotip": "Logo",
 	"stash.manage_users": "Manage users",
 	"stash.name": "Knowledge Box name",
