[sc-1648]: allow to change the kb slug (#97)
* Cleanup dead code from kb profile page

* Add UID and slug to kb profile page

* Use proper kb_slug_invalid validation message

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -171,11 +171,13 @@
 	"generic.settings": "Configuració",
 	"generic.showing": "Mostrant",
 	"generic.skip": "Ometre",
+	"generic.slug": "Slug",
 	"generic.suggeriment": "Suggeriments a Flaps",
 	"generic.suggestions": "Suggeriments",
 	"generic.switch_account": "Canviar de compte",
 	"generic.tags": "Etiquetes",
 	"generic.title": "Títol",
+	"generic.uid": "UID",
 	"generic.unlink": "Desenllaçar",
 	"generic.user": "Usuari",
 	"generic.user_preferences": "Preferències d’Usuari",
@@ -392,6 +394,7 @@
 	"stash.home.tags.total": "tags en total",
 	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la caixa de coneixement",
 	"stash.kb_name_invalid": "El nom de la caixa de coneixement no és vàlid",
+	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
 	"stash.logotip": "Logotip",
 	"stash.manage_users": "Gestionar usuaris",
 	"stash.name": "Nom de la Caixa",
