Add load more button on activity page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -62,6 +62,7 @@
 	"accounts.no_users_found": "no existeix cap usuari amb aquest correu",
 	"accounts.users": "usuari/s",
 	"activity.actor": "Actor",
+	"activity.load-more": "TODO",
 	"activity.modified": "Modificats",
 	"activity.new": "Creats",
 	"activity.processed": "Processats",
