--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -62,6 +62,7 @@
 	"accounts.no_users_found": "No hemos encontrado a ningún usuario con este correo",
 	"accounts.users": "usuario/s",
 	"activity.actor": "Actor",
+	"activity.load-more": "TODO",
 	"activity.modified": "Modificados",
 	"activity.new": "Creados",
 	"activity.processed": "Procesados",
