Add options to label sets

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -247,11 +247,20 @@
 	"ontology.customize_classification": "Personalitza la classificació.",
 	"ontology.delete_warning": "Si elimines aquesta família d'etiquetes, perdràs tota la classificació existent",
 	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom <strong>{{title}}</strong>",
+	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nom de l'etiqueta no és vàlid",
 	"ontology.manage_labels": "Afegeix, anomena i ordena les etiquetes que formen part d’aquesta família d'etiquetes",
 	"ontology.ontology_name": "Nom de la família d'etiquetes",
+	"ontology.paragraphs": "Paràgrafs",
+	"ontology.resources": "Recursos",
+	"ontology.sentences": "Frases",
 	"ontology.sort_alphabetically": "Ordenar Alfabèticament",
 	"ontology.tags_to_label_button": "Crea etiquetes de les carpetes",
+	"ontology.type_classification": "Tipus de classificació",
+	"ontology.type_classification_important": "IMP! Opció irreversible. No es podrà modificar un cop guardat.",
+	"ontology.type_classification_subtitle": "Tria què es pot classificar amb aquesta familia d'etiquetes.",
+	"ontology.type_labels": "Tipus de etiquetes",
+	"ontology.type_labels_subtitle": "TODO",
 	"profile.change_password": "Canviar contrasenya",
 	"profile.edit": "Editant el perfil de: ",
 	"profile.fill_data": "Configura les teves dades abans de començar a descobrir coneixement!",
