--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -35,6 +35,8 @@
 	"account.nua_key_activity_subtitle": "Last 30 days Knowledge box activity",
 	"account.nua_key_activity_title": "{{key}} activity log",
 	"account.nua_keys": "Understanding API keys",
+	"account.nua_webhook": "Webhook URL",
+	"account.nua_webhook.help": "Once your data is processed, the result is posted to this URL",
 	"account.related_kbs": "Account's Knowledge Boxes",
 	"account.renewal": "Processing consumption is renewed monthly",
 	"account.replace_config": "Replace settings",
