--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -257,7 +257,7 @@
 	"ontology.sort_alphabetically": "Ordenar Alfabèticament",
 	"ontology.tags_to_label_button": "Crea etiquetes de les carpetes",
 	"ontology.type_classification": "Tipus de classificació",
-	"ontology.type_classification_important": "IMP! Opció irreversible. No es podrà modificar un cop guardat.",
+	"ontology.type_classification_important": "Atenció! Opció irreversible. No es podrà modificar un cop guardat.",
 	"ontology.type_classification_subtitle": "Tria què es pot classificar amb aquesta familia d'etiquetes.",
 	"ontology.type_labels": "Tipus de etiquetes",
 	"ontology.type_labels_subtitle": "TODO",
