--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -274,7 +274,7 @@
 	"ontology.sort_alphabetically": "Sort Alphabetically",
 	"ontology.tags_to_label_button": "Create tags from folders",
 	"ontology.type_classification": "Type of classification",
-	"ontology.type_classification_important": "IMP! Irreversible option. It cannot be modified later.",
+	"ontology.type_classification_important": "Warning! Irreversible option. It cannot be modified later.",
 	"ontology.type_classification_subtitle": "Define what this label set can classify.",
 	"ontology.type_labels": "Type of labels",
 	"ontology.type_labels_subtitle": "If you allow the excluding option, you can only choose one of the set options and automatically excluding the rest. ",
