--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -257,7 +257,7 @@
 	"ontology.sort_alphabetically": "Ordenar Alfabéticamente",
 	"ontology.tags_to_label_button": "Crea etiquetas de las carpetas",
 	"ontology.type_classification": "Tipo de clasificación",
-	"ontology.type_classification_important": "IMP! Opción irreversible. No se podrá modificar una vez guardado.",
+	"ontology.type_classification_important": "!Atención! Opción irreversible. No se podrá modificar una vez guardado.",
 	"ontology.type_classification_subtitle": "Escoge qué puede ser clasificado con esta familia de etiquetas.",
 	"ontology.type_labels": "Tipo de etiquetas",
 	"ontology.type_labels_subtitle": "TODO",
