--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -249,11 +249,20 @@
 	"ontology.customize_classification": "Personaliza la clasificación.",
 	"ontology.delete_warning": "Si eliminas esta família de etiquetas perderás toda la clasificación existente",
 	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre <strong>{{title}}</strong>",
+	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nombre de la etiqueta no es válido",
 	"ontology.manage_labels": "Añade, nombra y ordena las etiquetas que forman parte de esta família de etiquetas",
 	"ontology.ontology_name": "Nombre de la família de etiquetas",
+	"ontology.paragraphs": "Párrafos",
+	"ontology.resources": "Recursos",
+	"ontology.sentences": "Frases",
 	"ontology.sort_alphabetically": "Ordenar Alfabéticamente",
 	"ontology.tags_to_label_button": "Crea etiquetas de las carpetas",
+	"ontology.type_classification": "Tipo de clasificación",
+	"ontology.type_classification_important": "!Atención! Opción irreversible. No se podrá modificar una vez guardado.",
+	"ontology.type_classification_subtitle": "Escoge qué puede ser clasificado con esta familia de etiquetas.",
+	"ontology.type_labels": "Tipo de etiquetas",
+	"ontology.type_labels_subtitle": "TODO",
 	"profile.change_password": "Cambiar contraseña",
 	"profile.edit": "Editando el perfil de: ",
 	"profile.fill_data": "Por favor,  configura tus datos antes de empezar a descubrir conocimiento",
