Add missing french translations + fix svelte tests

--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -12,8 +12,8 @@
 	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
 	"upload.files": "Fichiers à télécharger",
-	"upload.folder.drop": "TODO",
-	"upload.folder.selected": "TODO",
+	"upload.folder.drop": "Poser le dossier ici",
+	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
 	"upload.review": "Vous avez sélectionné {{num}} fichiers. Vérifiez la sélection puis lancez le traitement.",
 	"upload.select.search": "Rechercher",
 	"upload.select.title": "Sélectionnez les fichiers",
