Add some of the missings spanish and catalan translations

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -8,17 +8,17 @@
 	"home.completed": "Completat",
 	"home.files": "{{num}} fitxers",
 	"home.pending": "Pendent",
-	"login.button": "",
-	"login.headline": "",
-	"login.not-connected": "",
+	"login.button": "Accedir",
+	"login.headline": "TODO",
+	"login.not-connected": "TODO",
 	"upload.files": "Fitxers a pujar",
 	"upload.folder.drop": "Arrossega una carpeta",
 	"upload.folder.selected": "La carpeta conté {{num}} arxius",
 	"upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
-	"upload.select.search": "",
-	"upload.select.title": "",
-	"upload.source.help": "",
-	"upload.source.title": "",
+	"upload.select.search": "Cerca",
+	"upload.select.title": "Selecciona els fitxers",
+	"upload.source.help": "TODO",
+	"upload.source.title": "TODO",
 	"upload.steps.destination": "Selecciona la destinació",
 	"upload.steps.files": "Escull els fitxers",
 	"upload.steps.sources": "Selecciona l'origen",
