--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -8,17 +8,17 @@
 	"home.completed": "Completado",
 	"home.files": "{{num}} ficheros",
 	"home.pending": "Pendiente",
-	"login.button": "",
-	"login.headline": "",
-	"login.not-connected": "",
+	"login.button": "Iniciar sessión",
+	"login.headline": "TODO",
+	"login.not-connected": "TODO",
 	"upload.files": "Ficheros a subir",
 	"upload.folder.drop": "Arrastra una carpeta",
 	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
 	"upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
-	"upload.select.search": "",
-	"upload.select.title": "",
-	"upload.source.help": "",
-	"upload.source.title": "",
+	"upload.select.search": "Busca",
+	"upload.select.title": "Selecciona los archivos",
+	"upload.source.help": "TODO",
+	"upload.source.title": "TODO",
 	"upload.steps.destination": "Selecciona el destino",
 	"upload.steps.files": "Escoge los ficheros",
 	"upload.steps.sources": "Selecciona el origen",
