Review translations [sc-1870]

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -9,16 +9,16 @@
 	"home.files": "{{num}} fitxers",
 	"home.pending": "Pendent",
 	"login.button": "Accedir",
-	"login.headline": "TODO",
-	"login.not-connected": "TODO",
+	"login.headline": "La forma més fàcil i ràpida d'ingerir dades",
+	"login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
 	"upload.files": "Fitxers a pujar",
 	"upload.folder.drop": "Arrossega una carpeta",
 	"upload.folder.selected": "La carpeta conté {{num}} arxius",
 	"upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
 	"upload.select.search": "Cerca",
 	"upload.select.title": "Selecciona els fitxers",
-	"upload.source.help": "TODO",
-	"upload.source.title": "TODO",
+	"upload.source.help": "Trieu la origen des de la qual voleu pujar tots els fitxers",
+	"upload.source.title": "Origen",
 	"upload.steps.destination": "Selecciona la destinació",
 	"upload.steps.files": "Escull els fitxers",
 	"upload.steps.sources": "Selecciona l'origen",
