--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -9,16 +9,16 @@
 	"home.files": "{{num}} ficheros",
 	"home.pending": "Pendiente",
 	"login.button": "Iniciar sessión",
-	"login.headline": "TODO",
-	"login.not-connected": "TODO",
+	"login.headline": "La manera fácil y rápida de ingerir datos",
+	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
 	"upload.files": "Ficheros a subir",
 	"upload.folder.drop": "Arrastra una carpeta",
 	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
 	"upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
 	"upload.select.search": "Busca",
 	"upload.select.title": "Selecciona los archivos",
-	"upload.source.help": "TODO",
-	"upload.source.title": "TODO",
+	"upload.source.help": "Elige la origen desde la que quieres subir todos los archivos",
+	"upload.source.title": "Origen",
 	"upload.steps.destination": "Selecciona el destino",
 	"upload.steps.files": "Escoge los ficheros",
 	"upload.steps.sources": "Selecciona el origen",
