--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -17,7 +17,7 @@
 	"upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
 	"upload.select.search": "Cerca",
 	"upload.select.title": "Selecciona els fitxers",
-	"upload.source.help": "Trieu la origen des de la qual voleu pujar tots els fitxers",
+	"upload.source.help": "Trieu l'origen des del qual voleu pujar tots els fitxers",
 	"upload.source.title": "Origen",
 	"upload.steps.destination": "Selecciona la destinació",
 	"upload.steps.files": "Escull els fitxers",
