allow to download desktop app from dashboard

--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
 	"home.files": "{{num}} files",
 	"home.pending": "Pending",
 	"login.button": "Log in",
-	"login.headline": "The easy and fastest way to ingest data",
+	"login.headline": "The easiest and fastest way to ingest data",
 	"login.not-connected": "You're not connected, click on the button to log in the browser",
 	"upload.files": "Files to upload",
 	"upload.folder.drop": "Drop folder here",
