--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -394,6 +394,9 @@
 	"stash.delete_stash": "Eliminar caixa de coneixement",
 	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
 	"stash.description": "Descipció",
+	"stash.desktop.button": "Descarregar Desktop app",
+	"stash.desktop.description": "La forma més fàcil i ràpida d'ingerir dades a Nuclia",
+	"stash.desktop.text": "Disponible per a Windows, Mac i Linux",
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La caixa de coneixement encara està buida!",
 	"stash.enable_stash_email": "Habilitar correu electrònic",
