--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -444,6 +444,9 @@
 	"stash.delete_stash": "Delete knowledge box",
 	"stash.delete_stash_data": "Delete the knowledge box and all the data it contains",
 	"stash.description": "Description",
+	"stash.desktop.button": "Download Desktop app",
+	"stash.desktop.description": "The easiest and fastest way to upload data to Nuclia from (almost) any data-source",
+	"stash.desktop.text": "Available for Windows, Mac and Linux",
 	"stash.email": "Email server",
 	"stash.empty_kb": "Your knowledge box is still empty!",
 	"stash.enable_stash_email": "Enable email",
