--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -394,6 +394,9 @@
 	"stash.delete_stash": "Borrar caja de conocimiento",
 	"stash.delete_stash_data": "Elimina la caja de conocimiento y todos los datos que contiene",
 	"stash.description": "Descripción",
+	"stash.desktop.button": "Descargar Desktop app",
+	"stash.desktop.description": "La manera fácil y rápida de ingerir datos en Nuclia",
+	"stash.desktop.text": "Disponible para Windows, Mac y Linux",
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La caja de conocimiento aun está vacía!",
 	"stash.enable_stash_email": "Habilitar correo electrónico",
