Change search results layout

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -33,8 +33,9 @@
 	"resource.source": "Document d'origen",
 	"resource.summary": "Resum",
 	"results.empty": "Cap resultat",
-	"results.paragraphs": "Paràgrafes rellevants",
-	"results.semantic": "Frases rellevants",
+	"results.paragraphs": "Paràgrafs rellevants",
+	"results.semantic": "Resultats semàntics",
+	"results.sentences": "Frases rellevants",
 	"results.summary": "Resum",
 	"suggest.enter": "Premeu Enter ⏎ per veure els resultats",
 	"suggest.more": "Mostra més resultats",
