--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -34,7 +34,8 @@
 	"resource.summary": "Summary",
 	"results.empty": "No result found",
 	"results.paragraphs": "Relevant paragraphs",
-	"results.semantic": "Relevant sentences",
+	"results.semantic": "Semantic results",
+	"results.sentences": "Relevant sentences",
 	"results.summary": "Summary",
 	"suggest.enter": "Press Enter ⏎ to see results",
 	"suggest.more": "Show more results",
