--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -34,7 +34,8 @@
 	"resource.summary": "Resumen",
 	"results.empty": "No resultado",
 	"results.paragraphs": "Párrafos relevantes",
-	"results.semantic": "Oraciones relevantes",
+	"results.semantic": "Resultados semánticos",
+	"results.sentences": "Frases relevantes",
 	"results.summary": "Resumen",
 	"suggest.enter": "Presiona Entrar ⏎ para ver los resultados",
 	"suggest.more": "Mostrar más resultados",
