--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -34,7 +34,8 @@
 	"resource.summary": "Résumé",
 	"results.empty": "Aucun résultat trouvé",
 	"results.paragraphs": "Paragraphes pertinents",
-	"results.semantic": "Phrases pertinentes",
+	"results.semantic": "",
+	"results.sentences": "Phrases pertinentes",
 	"results.summary": "Résumé",
 	"suggest.enter": "Appuyer sur Entrée ⏎ pour voir les résultats",
 	"suggest.more": "Afficher plus de résultats",
