--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -34,7 +34,7 @@
 	"resource.summary": "Résumé",
 	"results.empty": "Aucun résultat trouvé",
 	"results.paragraphs": "Paragraphes pertinents",
-	"results.semantic": "",
+	"results.semantic": "Résultats sémantiques",
 	"results.sentences": "Phrases pertinentes",
 	"results.summary": "Résumé",
 	"suggest.enter": "Appuyer sur Entrée ⏎ pour voir les résultats",
