Oriolperramon8396/sc 1869/result layout (#137)
* Small fixes to resource view

* Restore loading

* Change search results layout

* Add translation

Co-authored-by: Eric BREHAULT <ebrehault@gmail.com>

Co-authored-by: Eric BREHAULT <ebrehault@gmail.com>

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -22,7 +22,6 @@
 	"error.search-beta": "Sort que t'hem avisat que encara estem en beta! 🙃",
 	"input.placeholder": "Escriviu la vostra pregunta aquí",
 	"modal.back": "Tornar",
-	"resource.close_preview": "Tancar previsualització",
 	"resource.creation": "Data de creació",
 	"resource.language": "Idioma",
 	"resource.other": "Altres dades del recurs",
@@ -34,8 +33,9 @@
 	"resource.source": "Document d'origen",
 	"resource.summary": "Resum",
 	"results.empty": "Cap resultat",
-	"results.paragraphs": "Paràgrafes rellevants",
-	"results.semantic": "Frases rellevants",
+	"results.paragraphs": "Paràgrafs rellevants",
+	"results.semantic": "Resultats semàntics",
+	"results.sentences": "Frases rellevants",
 	"results.summary": "Resum",
 	"suggest.enter": "Premeu Enter ⏎ per veure els resultats",
 	"suggest.more": "Mostra més resultats",
