--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -22,7 +22,6 @@
 	"error.search-beta": "Luckily we've warned that we're in beta! 🙃",
 	"input.placeholder": "Type your question here",
 	"modal.back": "Back",
-	"resource.close_preview": "Close preview",
 	"resource.creation": "Date of creation",
 	"resource.language": "Language",
 	"resource.other": "Other resource data",
@@ -35,7 +34,8 @@
 	"resource.summary": "Summary",
 	"results.empty": "No result found",
 	"results.paragraphs": "Relevant paragraphs",
-	"results.semantic": "Relevant sentences",
+	"results.semantic": "Semantic results",
+	"results.sentences": "Relevant sentences",
 	"results.summary": "Summary",
 	"suggest.enter": "Press Enter ⏎ to see results",
 	"suggest.more": "Show more results",
