--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -22,7 +22,6 @@
 	"error.search-beta": "Heureusement qu'on vous a dit que c'est une beta ! 🙃",
 	"input.placeholder": "Posez votre question ici",
 	"modal.back": "Retour",
-	"resource.close_preview": "Fermer la prévisualisation",
 	"resource.creation": "Date de création",
 	"resource.language": "Langue",
 	"resource.other": "Autres données sur la ressource",
@@ -35,7 +34,8 @@
 	"resource.summary": "Résumé",
 	"results.empty": "Aucun résultat trouvé",
 	"results.paragraphs": "Paragraphes pertinents",
-	"results.semantic": "Phrases pertinentes",
+	"results.semantic": "Résultats sémantiques",
+	"results.sentences": "Phrases pertinentes",
 	"results.summary": "Résumé",
 	"suggest.enter": "Appuyer sur Entrée ⏎ pour voir les résultats",
 	"suggest.more": "Afficher plus de résultats",
